<resources>
    <string name="app_name">Calculator-View</string>
    <string name="exponent">^</string>
<!--    <string name="pi">&#x1D745;</string>-->
    <string name="pi">\u03C0</string>
    <string name="back">\u21A9</string>
    <string name="clear">c</string>
    <string name="paren_left">(</string>
    <string name="paren_right">)</string>
    <string name="mod">%</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="negative">(-)</string>
    <string name="equals">=</string>
</resources>