<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="23 * 784" />

    <Button
        android:id="@+id/buttonExponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/exponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOutput" />

    <Button
        android:id="@+id/buttonPi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pi"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonExponent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLn"
        app:layout_constraintStart_toEndOf="@+id/buttonExponent" />

    <Button
        android:id="@+id/buttonLn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonExponent"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/buttonPi" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#F44336"
        android:text="@string/clear"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonExponent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonParenLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/paren_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExponent" />

    <Button
        android:id="@+id/buttonParenRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paren_right"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonParenLeft"
        app:layout_constraintEnd_toStartOf="@+id/buttonMod"
        app:layout_constraintStart_toEndOf="@id/buttonParenLeft" />

    <Button
        android:id="@+id/buttonMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonParenLeft"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@id/buttonParenRight" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/divide"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonParenLeft"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonParenLeft" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/eight"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/nine"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@id/button8" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/multiply"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/five"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/six"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@id/button5" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/minus"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/two"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/three"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@id/button2" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/plus"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/buttonNegative"
        app:layout_constraintStart_toEndOf="@id/button0" />

    <Button
        android:id="@+id/buttonNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/negative"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@id/buttonDot" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#2196F3"
        android:text="@string/equals"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>